--- a/article/sections/section1.tex
+++ b/article/sections/section1.tex
@@ -4,24 +4,22 @@
 інформації, для того, щоб прогнозувати певні послідовності. Так і уявляти мову як
 набір об'єктів або токенів, які описують явища, які ми, люди, розуміємо. Наприклад,
 іменники, дієслова, дієслівні групи та іменні групи, що в українській мові
-може трактуватися як іменникове (субстантивне) словосполучення – словосполучення 
-з іменником у ролі головного слова \cite{bib3}. Та намагатися зрозуміти як
+може трактуватися як іменникове (субстантивне) словосполучення –-- словосполучення 
+з іменником у ролі головного слова~\cite{bib3}. Та намагатися зрозуміти як
 ці об'єкти взаємодіють одне з одним в граматичному сенсі.
 
-% \newpage
 \subsection{Конституентний парсинг}
 Якщо розглядати мову тільки з точки зору статистистики, тобто як послідовності N-грам, токенів
 чи символів, які є унітарними векторами, ми можемо створювати моделі мови, тобто трансформери,
 або виводити інші приховані властивості, такі як частини мови, тощо. Але в природній мові слова
 можуть мати значення, яке виходить за межі їхньої символьної репрезентації. Адже природня
-мова - це не просто набір токенів. Речення підкоряються певним граматичним правилам і мають
+мова --- це не просто набір токенів. Речення підкоряються певним граматичним правилам і мають
 контекст, у якому вони вживаються. Цей контекст не міститься напряму в реченні, але ми, люди,
 інтуїтивно його розуміємо, базуючись на нашому попередньому досвіді, природних явищах, поведінкових
 шаблонах, тощо. Від цього контексту напряму залежить те, як ми інтерпритуємо те, чи інше речення.
 
 Із достатнім набором даних можливо натренувати модель, яка буде розуміти певні граматичні
-закономірності, але якщо розширити цей набір даних правилами і тонкощами мови - це значно
-підвищить релевантність цієї моделі.
+закономірності, але якщо розширити цей набір даних правилами і тонкощами мови --- це значно підвищить релевантність цієї моделі.
 
 \begin{wrapfigure}{r}{0.35\textwidth}
   \begin{center}
@@ -34,14 +32,14 @@
   \label{text:context_free_grammar}
 \end{wrapfigure}
 
-Контекстно-вільна граматика (КВГ) - це набір правил, які визначають те, як потрібно класифікувати,
+Контекстно-вільна граматика (КВГ) --- це набір правил, які визначають те, як потрібно класифікувати,
 групувати та розміщувати мовні токени в ієрархічні граматичні структури. Символи, що
 відповідають за слова у мові, називають термінальними символами. Вони також є і кінцевими
 токенами, які можна зустріти у наборах даних. Набір правил, який оголошує термінальні
-символи називають лексиконом \cite{bib5}. Розглянувши приклад
+символи називають лексиконом~\cite{bib5}. Розглянувши приклад
 \texttt{Іменник~$\rightarrow$~кіт~$\mid$~риба~$\mid$~курка~$\mid$~дорога}, можна зрозуміти
 що термінальними символами є \texttt{кіт, риба, курка, дорога}. У більш узагальненому
-вигляді контекстно-вільна граматика зображена на рисунку \ref{text:context_free_grammar}.
+вигляді контекстно-вільна граматика зображена на рисунку~\ref{text:context_free_grammar}.
 Якщо створити правильний набір правил, ми можемо використовувати КВГ для того, щоб парсити
 існуючі тексти, або навіть генерувати нові, такі, що задовольняють правилам нашої граматики.
 
@@ -58,7 +56,7 @@
   \label{text:cfg_uk}
 \end{wrapfigure}
 
-Оголосивши граматику \ref{text:cfg_uk}, та просто застосовуючи її правила,
+Оголосивши граматику~\ref{text:cfg_uk}, та просто застосовуючи її правила,
 ми можемо розібрати речення \texttt{Дідо Богдан був тоді в італійському полоні}.
 При проходженні правил, що містять тільки термінальні символи, ми отримаємо
 \texttt{[{\footnotesize Noun}Дідо] [{\footnotesize Noun}Богдан] 
@@ -71,7 +69,7 @@
 [{\footnotesize Adjective}італійському] [{\footnotesize Noun}полоні}].
 Таким чином ми можемо отримати структуру, схожу на дерево. Дійсно, нотація з використанням
 квадратних дужок є лише скороченною формою запису
-абстрактного дерева розбору (parse tree), рис. \ref{text:parse_tree}.
+абстрактного дерева розбору (parse tree), рисунок~\ref{text:parse_tree}.
 Отже, ми можемо зробити висновок, що абстрактне дерево розбору є результатом слідування
 правил із заданої контекстно-вільної граматики. Такі правила ми можемо використовувати не
 тільки для того, щоб парсити існуючі тексти, а й щоб генерувати нові. Наприклад, якщо
@@ -79,17 +77,17 @@
 речення, але додавши до такого підходу ймовірнісні методи, можна отримати речення, які
 несуть в собі більше сенсу.
 
-Використовуючи тільки КВГ, ми не вказуємо яким конкретно чином ми повинні генерувати
-абстрактне дерево розбору. Для деяких реченнь, змінивши порядок в яких застосовуються ці
-правила, ми отримаємо різні дерева розбору. Тому нам потрібен алгоритм, який буде 
-використовувати КВГ, при цьому на виході повертати найбільш коректне дерево розбору.
-Ці неоднозначності умовно можна поділити на 2 категорії:
 \begin{wrapfigure}{r}{0.3\textwidth}
  \includegraphics[width=\linewidth]{parse_tree.pdf} 
   \caption{Приклад дерева розбору}
   \label{text:parse_tree}
 \end{wrapfigure}
 
+Використовуючи тільки КВГ, ми не вказуємо яким конкретно чином ми повинні генерувати
+абстрактне дерево розбору. Для деяких реченнь, змінивши порядок в яких застосовуються ці
+правила, ми отримаємо різні дерева розбору. Тому нам потрібен алгоритм, який буде 
+використовувати КВГ, при цьому на виході повертати найбільш коректне дерево розбору.
+Ці неоднозначності умовно можна поділити на 2 категорії:
 \begin{enumerate}
     \item Вкладення: коли даний конституент може бути вкладеним до дерева розбору
     більше, ніж в одному місці.
@@ -101,9 +99,9 @@
 Процес, який дозволяє обрати коректний варіант із декількох варіантів розбору називаєтся
 прибиранням синтаксичних неоднозначностей (syntactic disambiguation). Найбільш
 популярним алгоритмом динамічного програмування, який вирішує цю проблему є
-алгоритм Кока — Янгера — Касамі (CKY) \cite{bib6}. Для того, щоб
+алгоритм Кока — Янгера — Касамі (CKY)~\cite{bib6}. Для того, щоб
 використовувати цей алгоритм, потрібно щоб КВГ була представлена у вигляді
-нормальної форми Чомскі \cite{bib7}, тобто граматика складалася тільки
+нормальної форми Чомскі~\cite{bib7}, тобто граматика складалася тільки
 з двох нетермінальних символів, або з одного термінального символа.
 
 \subsection{Парсинг залежностей}
@@ -119,15 +117,15 @@
     в одну групу.
 \end{enumerate}
 
-Конституентний парсинг - це не єдиний спосіб парсингу інформації у реченні.
+Конституентний парсинг --- це не єдиний спосіб парсингу інформації у реченні.
 Іншим способом є парсинг залежностей (dependency parsing). Кожне слово у
 реченні можна логічно з'єднати з іншим словом, від якого вого залежить,
 при цьому вказавши тип зв'язку між цими двома словами. Таким чином, речення
-постане у вигляді дерева, де вузли будуть словами, а грані - залежностями.
+постане у вигляді дерева, де вузли будуть словами, а грані --- залежностями.
 У такому формалізмі, синтаксична структура речення представлена
 виключно з точки зору слів та набору направлених бінарних граматичних відношеннь,
 які є між цими словами. Таким чином результатом парсингу уже є не дерево розбору,
-а дерево залежностей, рис. \ref{img:dependency_tree}.
+а дерево залежностей, рисунок~\ref{img:dependency_tree}.
 \begin{figure}[ht]
   \begin{center}
     \includegraphics[width=\textwidth]{dependency_tree.pdf}
@@ -165,18 +163,25 @@
 \end{enumerate}
 
 Деякі алгоритми є проективними, тобто зв'язки між вузлами не можуть пересікатися, як
-це зображено на рисунку \ref{img:dependency_tree}. Більшість реченнь у мові
+це зображено на рисунку~\ref{img:dependency_tree}. Більшість реченнь у мові
 влаштована саме таким чином. Але є й речення, у яких грані графа перетинаються. Тому це
 потрібно враховувати при обробці відповідних наборів даних.
 
 Коли ми говоримо про транзиційні підходи, найчастіше маються на увазі
 парсери, які побудовані на основі програмного стеку. Такі парсери структурно можна
-розділити на дві функції, які вони виконують. Перша - це машина побудована на стеку,
-яка кладе слова речення на верхівку цього стеку. Друга - безпосередньо
+розділити на дві функції, які вони виконують. Перша --- це машина побудована на стеку,
+яка кладе слова речення на верхівку цього стеку. Друга --- безпосередньо
 сам парсер, або натренована нейронна мережа, яка вирішує яким чином потрібно
 розставляти зв'язки між термінальними членами речення. Саме цей парсер і будує
 граф, розставляючи ці зв'язки, у яких є тільки два напрями: вправо і вліво.
-Він бере два останні елементи на стеку та встановлює між ними відношення \cite{bib8}.
+Він бере два останні елементи на стеку та встановлює між ними відношення~\cite{bib8}.
 Такі парсери будують на основі тренованих нейронних мереж, які
 стають класифікаторами токенів. Найбільшою вибіркою даних для навчання цих класифікаторів
 є корпуси текстів Universal Dependencies.
+
+
+\subsection*{Висновки до розділу \arabic{section}}
+\addcontentsline{toc}{subsection}{Висновки до розділу \arabic{section}}
+У цьому розділі було розглянуто найпопулярніші методи для репрезентації структури речення, освітлено їхні недоліки та переваги. Було описано метод парсингу залежностей у контексті теми цієї роботи та корпусу текстів Universal
+Dependencies. Досліджено існуючі алгоритми реалізації цих методів та описано
+приклади розбору заданих формальних граматик.
