--- a/article/sections/section5.tex
+++ b/article/sections/section5.tex
@@ -13,12 +13,12 @@ Dependencies.
 Завдяки кінцевому програмному продукту було проаналізовано 7060 речень 
 та, загалом, 122000 токенів, які мають синтаксовий шар.
 Для аналізу використовувалися різні тексти, для того, щоб охопити максимальну
-пвдмножину всієї мови: статті, новини, дописи, підручники, листування, казки, худпроза — і сучасні, і класичні \cite{bib12}.
+пвдмножину всієї мови: статті, новини, дописи, підручники, листування, казки, худпроза — і сучасні, і класичні~\cite{bib12}.
 
 Результатом аналізу корпусу української мови стали наступні законормрності,
 які відображені у графіках.
 
-На рисунку \ref{img:uk_upos} проілюстровано графік частот універсальних
+На рисунку~\ref{img:uk_upos} проілюстровано графік частот універсальних
 частин мови, тобто upos, де видно, що у корпусі всього 17 унікальних
 частин мови, де найпопулярнішою є іменник, який зустрічається в різних
 місцях майже 10000 разів.
@@ -37,8 +37,7 @@ Dependencies.
 
 На відміну від універсальних частин мови, порівнявши сигнатуру, де за основу
 взяті і універсальна частина мови і її синтаксичне відношення, отримаємо
-розподіл, який майже точно накладається на розподіл Зіпфа, рисунок
-\ref{img:uk_deprel_upos}. Також на цьому рисунку можемо побачити, що 
+розподіл, який майже точно накладається на розподіл Зіпфа, рисунок~\ref{img:uk_deprel_upos}. Також на цьому рисунку можемо побачити, що 
 всього таких сигнатур у корпусі 37722, при чому унікальних
 тільки 178.
 
@@ -94,8 +93,7 @@ Dependencies.
 \end{figure}
 \end{multicols}
 
-
-some text
+\newpage
 
 \subsection{Корпус іспанської мови}
 Проаналізувавши корпус іспаномовних текстів, який щонайменше у 8 разів
@@ -159,7 +157,15 @@ some text
 \end{figure}
 \end{multicols}
 
-\subsection{Висновок}
-Проаналізувавши отримані графіки, ми можемо дійти до висновку, що
-тренди, які спостерігаються в україномовному корпусі майже так само
-прослідковуються в іспаномовному корпусі, що підтверджує зазначену мету UD.
+\subsection*{Висновки до розділу \arabic{section}}
+\addcontentsline{toc}{subsection}{Висновки до розділу \arabic{section}}
+Проаналізувавши отримані графіки, що зображено на рисунках
+\ref{img:uk0}~\nobreakdash--~\ref{img:es6},
+ми можемо дійти до висновку, що тренди, які
+спостерігаються в україномовному корпусі майже так само прослідковуються в
+іспаномовному корпусі, що підтверджує зазначену мету проекту Universal Dependencies.
+
+У цьому розділі було продемонстровано статистичні закономірності у двох
+корпусах UD. Загалом проаналізовано 2016 дерев в україномовному та 16013 дерев
+в іспаномовному корпусах. Що в одному, що в іншому виявлено 17 унікальних
+універсальних частин мови.
