--- a/article/structural/abstract.tex
+++ b/article/structural/abstract.tex
@@ -1,20 +1,22 @@
 \thispagestyle{empty}
-
-\begin{center}
-\textbf{Національний технічний  університет України \\
-``Київський політехнічний інститут імені Ігоря Сікорського''}
-\end{center}
-
-here should be task
-
-
-\newpage
-\thispagestyle{empty}
 \begin{center}
 \textbf{\Large АНОТАЦІЯ}
 \end{center}
 
-АНОТАЦІЯ
+Метою дипломної роботи є розробка програмного продукту для статистичного
+аналізу формальних структур корпусу текстів Universal Dependencies.
+Результат роботи програми може бути використаний дослідниками в області
+штучного інтелекту та науки про дані, для кращого розуміння вибірки даних
+для своїх моделей. 
+
+Ця система була написана об’єктно-орієнтованою мовою програмування Python.
+Виведення та візуалізація інформації відбувається у вигляді графіків, за
+допомогою бібліотеки MatPlotLib. Для побудови моделі, структур даних
+та статистичного аналізу використовувалися бібліотеки Pandas та Numpy.
+
+Записка містить \pageref{LastPage} сторінок, 23 рисунки, 1 таблицю, 1 додаток і 21 посилання.
+
+Ключові слова: python, обробка природної мови, аналіз даних, інтерпретована мова програмування, візуалізація, статистичний аналіз.
 
 \newpage
 \thispagestyle{empty}
@@ -23,4 +25,15 @@ here should be task
 \textbf{\Large ABSTRACT}
 \end{center}
 
-ABSTRACT
+The purpose of the thesis is to develop a software product for statistical
+analysis of the formal structures of the text corpora Universal Dependencies.
+The results of the program can be used by researchers in the field of
+artificial intelligence and data science, for a better understanding of the data they going to use for their models.
+
+The code was written in Python, object-oriented programming language.
+Output and visualization of the data are made via charts, using the MatPlotLib library. Pandas and Numpy libraries were used to build a model, data structure
+and to perform a statistical analysis.
+
+Thesis has a volume of \pageref{LastPage} sheets and contains 1 appendices and 21 references. There are also 23 figures and 1 table.
+
+Keywords: python, natural language processing, data science, interpreted programming language, visualization, statistical analysis.
