--- a/article/structural/bibliography.tex
+++ b/article/structural/bibliography.tex
@@ -5,19 +5,18 @@
 \addcontentsline{toc}{section}{\refname}
 
 \bibitem{bib3}
-Shkuratjana, N. and Shevchuk, S. (2010). Modern Ukrainian literary language. Modular course.
+Shkuratjana N., Shevchuk S. (2010) Modern Ukrainian literary language Modular course [Suchasnaukrayins`ka
+literaturnamova Modul`ny`jkurs] Kyiv: Arij, p 824.
 
 \bibitem{bib5}
 Constituency Grammars : URL :
 https://web.stanford.edu/~jurafsky/slp3/12.pdf
 
 \bibitem{bib6}
-Cocke–Younger–Kasami algorithm : URL :
-https://en.wikipedia.org/wiki/CYK\_algorithm
+Cocke, J., \& Schwartz, J. T. (1970). Programming languages and their compilers. Preliminary notes. Courant Inst, of Math. Sciences, New York University.
 
 \bibitem{bib7}
-Chomsky normal form : URL : \\
-https://en.wikipedia.org/wiki/Chomsky\_normal\_form
+Chomsky, N. (1959). On certain formal properties of grammars. Information and control, 2(2), 137-167. : doi : https://doi.org/10.1016\%2FS0019-9958\%2859\%2990362-6
 
 \bibitem{bib8}
 Logical Representations of Sentence Meaning : URL :
@@ -67,5 +66,15 @@ Dynamic Programming on Trees (Algorithms for Coding Interviews), 2022. 141p.
 
 \bibitem{bib18}
 Universal Dependencies : URL : https://universaldependencies.org
+
+\bibitem{bib19}
+CoNLL-U Viewer : URL : https://universaldependencies.org/conllu\_viewer.html
+
+\bibitem{bib20}
+Pandas : URL : https://pandas.pydata.org
+
+\bibitem{bib21}
+Numpy : URL : https://numpy.org
+
 
 \end{thebibliography}
