--- a/article/structural/conclusion.tex
+++ b/article/structural/conclusion.tex
@@ -10,7 +10,7 @@
 У ході виконання цієї роботи було розроблено інструмент, який дозволяє аналізувати
 корпуси текстів на відповідні статистичні закономірності, такі як частота зустрічання
 частин мови, частота універсальних залежностей від кореневого елементу речення, глибина
-та ширина піддереви кожного слова, та інші.
+та ширина піддерева кожного слова, та інші.
 Цей інструмент не залежить від мови, тому можна аналізувати та порівнювати будь-які мови
 корпусу. Додані інструменти по нормалізації корпусів сприяють тому, щоб різниця
 у вхідних даних, при порівнянні різних мов була мінімальною.
