--- a/article/structural/introduction.tex
+++ b/article/structural/introduction.tex
@@ -6,11 +6,10 @@
 \textbf{\Large ВСТУП}
 \end{center}
 
-Обробка природної мови - це область комп’ютерної лінгвістики, мета якої
-полягає у знаходженні значимої інформації з текстів, подальшому аналізі цієї ін-
-формації та прикладному застосуванні проаналізованих даних. Предметом дослі-
-дження є природні мови - ті, які природньо розвивалася з часом та які люди вико-
-ристовують для того, щоб комунікувати між собою.
+Обробка природної мови --- це область комп’ютерної лінгвістики, мета якої
+полягає у знаходженні значимої інформації з текстів, подальшому аналізі цієї
+інформації та прикладному застосуванні проаналізованих даних. Предметом
+дослідження є природні мови --- ті, які природньо розвивалася з часом та які люди використовують для того, щоб комунікувати між собою.
 
 Основоположною задачею при дослідження природних мов є створення класифікованих
 та впорядкованих наборів даних, для того щоб з них можна було отримати
@@ -18,7 +17,7 @@
 На основі таких даних можна створювати штучні інтелекти, для взаємодії з комп'ютером
 використовуючи тільки природню мову. Прикладами таких систем є асистенти в популярних
 мобільних операційних системах, які виводять інтерфейс користування пристроєм
-на зовсім інший рівени. Але застосування подібних штучних інтелектів
+на зовсім інший рівень. Але застосування подібних штучних інтелектів
 не обмежується тільки голосовими асистентами. Дуже перспективними є варіанти застосування
 для аналізу текстів та маркування їх за певними категоріями. Досконало дослідивши
 закономірності в природних мовах можна значно підвищити точність машинного перекладу
