feat(article): add info about suffix trees; cite all bibs in the text

--- a/article/sections/section2.tex
+++ b/article/sections/section2.tex
@@ -1,16 +1,11 @@
 \section{КОРПУСИ ТЕКСТІВ UNIVERSAL DEPENDENCIES}
 
 Проблема відмінності природних мов заважає класифікації та порівнянню цих мов,
-тому проект Universal Dependencies ставить на меті її вирішити.
-
-% https://applied-language-technology.mooc.fi/html/notebooks/part_iii/02_universal_dependencies.html
-
-% https://universaldependencies.org/u/pos/
+тому проект Universal Dependencies ставить на меті її вирішити~\cite{bib18}.
 
 \subsection{Корпуси текстів Universal Dependencies}
-% укр - 122275 токенів 122324 слова 7060 реченнь
-Корпуси текстів Universal Dependencies або скорочено UD — це проект спільної розробки
-з відкритим кодом, який має дві основні цілі:
+Корпуси текстів Universal Dependencies або скорочено UD — це проект
+спільної розробки з відкритим кодом, який має дві основні цілі:
 
 \begin{enumerate}
     \item розробити загальну структуру для опису граматичної структури різноманітних мов~\cite{bib1}.
