--- a/article/sections/section4.tex
+++ b/article/sections/section4.tex
@@ -28,8 +28,8 @@
   специфічними до банку дерев характеристиками і відносини залежностей, щоб 
   перевірити, чи вони дійсні.
   
-  \item eval.py --- Оцінює точність токенізатора/лемматизатора/теггера/парсера
-  UD щодо даних золотого стандарту.
+  \item Переглядач CoNLL-U --- Онлайн переглядач дерев залежностей на основі
+  файлів CoNLL-U~\cite{bib19}.
   
   \item check\_sentence\_ids.pl --- Зчитує файли CoNLL-U і перевіряє, чи кожне
   речення має унікальний ідентифікатор у коментарі sent\_id.
@@ -126,7 +126,8 @@ PyCharm також має вбудований термінал, що значн
 включно зі станндартною бібліотекою мови Python відповідної версії.
 
 \subsection{Система контролю версій Git}
-Система Git без сумніву є одним із найголовніших засобів розробки 21 століття. Проблема
+Система Git~\cite{bib13} без сумніву є одним із найголовніших засобів розробки 21
+століття. Проблема
 керування версіями виникла ще за часів написання перших програм. І загострилася із
 експоненційним ростом складності програмного забезпечення.
 
