--- a/article/structural/bibliography.tex
+++ b/article/structural/bibliography.tex
@@ -5,7 +5,8 @@
 \addcontentsline{toc}{section}{\refname}
 
 \bibitem{bib3}
-Shkuratjana N., Shevchuk S. (2010) Modern Ukrainian literary language Modular course [Suchasnaukrayins`ka
+Shkuratjana N., Shevchuk S. (2010) Modern Ukrainian literary language Modular
+course [Suchasnaukrayins`ka
 literaturnamova Modul`ny`jkurs] Kyiv: Arij, p 824.
 
 \bibitem{bib5}
@@ -13,14 +14,20 @@ Constituency Grammars : URL :
 https://web.stanford.edu/~jurafsky/slp3/12.pdf
 
 \bibitem{bib6}
-Cocke, J., \& Schwartz, J. T. (1970). Programming languages and their compilers. Preliminary notes. Courant Inst, of Math. Sciences, New York University.
+Cocke, J., \& Schwartz, J. T. (1970). Programming languages and their compilers.
+Preliminary notes. Courant Inst, of Math. Sciences, New York University.
 
 \bibitem{bib7}
-Chomsky, N. (1959). On certain formal properties of grammars. Information and control, 2(2), 137-167. : doi : https://doi.org/10.1016\%2FS0019-9958\%2859\%2990362-6
+Chomsky, N. (1959). On certain formal properties of grammars. Information and
+control, 2(2), 137-167. : doi :
+https://doi.org/10.1016\%2FS0019-9958\%2859\%2990362-6
 
 \bibitem{bib8}
 Logical Representations of Sentence Meaning : URL :
 https://web.stanford.edu/~jurafsky/slp3/15.pdf
+
+\bibitem{bib18}
+Universal Dependencies : URL : https://universaldependencies.org
 
 \bibitem{bib1}
 Marie-Catherine de Marneffe, Christopher D. Manning, Joakim Nivre, Daniel Zeman;
@@ -28,53 +35,59 @@ Universal Dependencies. Computational Linguistics 2021; 47 (2): 255–308. doi:
 https://doi.org/10.1162/coli\_a\_00402
 
 \bibitem{bib2}
-Nivre, J., de Marneffe, M.-C., Ginter, F., Hajič, J., Manning, C. D., Pyysalo, S., Schuster, S., Tyers, F., \& Zeman, D. (2020). Universal Dependencies v2: An Evergrowing Multilingual Treebank Collection. Proceedings of the 12th Language Resources and Evaluation Conference, 4034–4043. URL: https://aclanthology.org/2020.lrec-1.497
+Nivre, J., de Marneffe, M.-C., Ginter, F., Hajič, J., Manning, C. D., Pyysalo, S.,
+Schuster, S., Tyers, F., \& Zeman, D. (2020). Universal Dependencies v2: An
+Evergrowing Multilingual Treebank Collection. Proceedings of the 12th Language
+Resources and Evaluation Conference, 4034–4043. URL:
+https://aclanthology.org/2020.lrec-1.497
 
 \bibitem{bib9}
-Lipenkova, J., \& Souček, M. (2014, April). Converting Russian dependency treebank to Stanford typed dependencies representation. In Proceedings of the 14th Conference of the European Chapter of the Association for Computational Linguistics, volume 2: Short Papers (pp. 143-147).
+Lipenkova, J., \& Souček, M. (2014, April). Converting Russian dependency treebank
+to Stanford typed dependencies representation. In Proceedings of the 14th
+Conference of the European Chapter of the Association for Computational
+Linguistics, volume 2: Short Papers (pp. 143-147).
 
 \bibitem{bib10}
-Nivre, J. (2007, June). Data-driven dependency parsing across languages and domains: perspectives from the CoNLL-2007 shared task. In Proceedings of the Tenth International Conference on Parsing Technologies (pp. 168-170).
+Nivre, J. (2007, June). Data-driven dependency parsing across languages and
+domains: perspectives from the CoNLL-2007 shared task. In Proceedings of the Tenth
+International Conference on Parsing Technologies (pp. 168-170).
 
 \bibitem{bib11}
-Buchholz, S., \& Marsi, E. (2006, June). CoNLL-X shared task on multilingual dependency parsing. In Proceedings of the tenth conference on computational natural language learning (CoNLL-X) (pp. 149-164).
+Buchholz, S., \& Marsi, E. (2006, June). CoNLL-X shared task on multilingual
+dependency parsing. In Proceedings of the tenth conference on computational
+natural language learning (CoNLL-X) (pp. 149-164).
+
+\bibitem{bib16}
+Lundh F. Python Standard Library : O’Reilly \& Associates, 2001. 254p.
+
+\bibitem{bib21}
+Numpy : URL : https://numpy.org
+
+\bibitem{bib20}
+Pandas : URL : https://pandas.pydata.org
+
+\bibitem{bib15}
+Маккинли У. Python и анализ данных : ДМК Пресс, 2015. 482с.
 
 \bibitem{bib4}
 Language Server Protocol : URL :
 https://microsoft.github.io/language-server-protocol
 
-\bibitem{bib12}
-Золотий морфосинтаксовий стандарт : URL :
-https://mova.institute/золотий\_стандарт
-
-
-
-\bibitem{bib13}
-Scott Chacon, Ben Straub, Pro Git : Apress; 2nd ed. edition 2014. 440p.
-
 \bibitem{bib14}
-Gabriel Valiente Algorithms on Trees and Graphs : Springer; 2002nd edition (September 5, 2002). 450p.
-
-\bibitem{bib15}
-Маккинли У. Python и анализ данных : ДМК Пресс, 2015. 482с.
-
-\bibitem{bib16}
-Lundh F. Python Standard Library : O’Reilly \& Associates, 2001. 254p.
+Gabriel Valiente Algorithms on Trees and Graphs : Springer; 2002nd edition
+(September 5, 2002). 450p.
 
 \bibitem{bib17}
 Dynamic Programming on Trees (Algorithms for Coding Interviews), 2022. 141p.
 
-\bibitem{bib18}
-Universal Dependencies : URL : https://universaldependencies.org
-
 \bibitem{bib19}
 CoNLL-U Viewer : URL : https://universaldependencies.org/conllu\_viewer.html
 
-\bibitem{bib20}
-Pandas : URL : https://pandas.pydata.org
+\bibitem{bib13}
+Scott Chacon, Ben Straub, Pro Git : Apress; 2nd ed. edition 2014. 440p.
 
-\bibitem{bib21}
-Numpy : URL : https://numpy.org
-
+\bibitem{bib12}
+Золотий морфосинтаксовий стандарт : URL :
+https://mova.institute/золотий\_стандарт
 
 \end{thebibliography}
