--- a/article/structural/conclusion.tex
+++ b/article/structural/conclusion.tex
@@ -11,8 +11,12 @@
 корпуси текстів на відповідні статистичні закономірності, такі як частота зустрічання
 частин мови, частота універсальних залежностей від кореневого елементу речення, глибина
 та ширина піддерева кожного слова, та інші.
-Цей інструмент не залежить від мови, тому можна аналізувати та порівнювати будь-які мови
-корпусу. Додані інструменти по нормалізації корпусів сприяють тому, щоб різниця
+Було розроблено механізм конвертації дерев до суфіксних дерев, що дає змогу
+шукати спільні підрядки та їх частоти за заданою граматикою.
+
+Цей інструмент не залежить від мови, тому можна аналізувати та
+порівнювати будь-які мови корпусу. 
+Додані інструменти по нормалізації корпусів сприяють тому, щоб різниця
 у вхідних даних, при порівнянні різних мов була мінімальною.
 
 Було проведено порівння корпусів з іспанською та українською мовами та встановлено кореляцію
